--- a/resume.tex
+++ b/resume.tex
@@ -100,7 +100,7 @@
 \newenvironment{twocolentry}[2][]{
     \onecolentry
     \def\secondColumn{#2}
-    \setcolumnwidth{\fill, 4.5 cm}
+    \setcolumnwidth{\fill, 5 cm}
     \begin{paracol}{2}
 }{
     \switchcolumn \raggedleft \secondColumn
@@ -160,58 +160,54 @@
 
 \section{Ausbildung}
 \begin{twocolentry}{
-		\textit{Okt. 2024 – März 2026}} \textbf{Friedrich-Alexander-Universität Erlangen–Nürnberg} \\
-		\textit{M.Sc. Mathematik, Digitale Geisteswissenschaften}
+		\textit{Okt. 2024 – März 2026}} \textbf{Master of Science Mathematik} \\
+		\textit{Friedrich-Alexander-Universität Erlangen–Nürnberg}\\
+		\textit{Nebenfach: Digitale Geisteswissenschaften}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Arbeit:} Universelle Koeffizienten und Mayer-Vietoris Sequenz für Moore Homologie
+		\item \textbf{Thesis:} Universelle Koeffizienten und Mayer-Vietoris Sequenz für Moore Homologie
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Okt. 2021 – Sept. 2024}}
-	\textbf{Friedrich-Alexander-Universität Erlangen–Nürnberg} \\
-	\textit{B.Sc. Mathematik, Informatik}
+	\textbf{Bachelor of Science Mathematik} \\
+	\textit{Friedrich-Alexander-Universität Erlangen–Nürnberg}\\
+	\textit{Nebenfach: Informatik}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Arbeit:} Algebraische und topologische Persistenz
+		\item \textbf{Thesis:} Algebraische und topologische Persistenz
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{April 2015 – März 2018}}
-	\textbf{Universität Regensburg} \\
-	\textit{M.A. Informationswissenschaft}
+	\textbf{Master of Arts Informationswissenschaft} \\
+	\textit{Universität Regensburg}\\
+	\textit{Nebenfach: Digitale Geisteswissenschaften}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Arbeit:} Deep Learning zur Schätzung der absorbierten Strahlungsdosis in der nuklearmedizinischen Diagnostik
+		\item \textbf{Thesis:} Deep Learning zur Schätzung der absorbierten Strahlungsdosis in der nuklearmedizinischen Diagnostik
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Okt. 2012 – März 2015}}
-	\textbf{Universität Regensburg} \\
-	\textit{B.A. Deutsch, Italienisch, Informationswissenschaft, Medieninformatik}
+	\textbf{Bachelor of Arts Deutsche Philologie} \\
+	\textit{Universität Regensburg}\\
+	\textit{Hauptfächer: Deutsch, Italienisch, Informationswissenschaft, Medieninformatik}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Arbeit:} Entwicklung einer Interpunktionsplattform mit linguistischen Modulen für das Information Retrieval
+		\item \textbf{Thesis:} Entwicklung einer Interpunktionsplattform mit linguistischem Information Retrieval
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
-		\textit{Okt. 2012 – April 2013}}
+	\textit{Okt. 2012 – April 2013}}
 	\textbf{Universität Regensburg} \\
 	\textit{Studienbegleitende IT-Ausbildung}
 \end{twocolentry}
@@ -230,7 +226,7 @@
 \vspace{0.1 cm}
 \begin{onecolentry}
   \begin{highlights}
-    \item Übungsleiter in Topologie (2023, 2026), Funktionalanalysis (2026), Analysis~3 (2024, 2026), Analysis~2 (2025), Lineare Algebra~1 (2024), Mathematik für Ingenieure~A2: Analysis (2025), Mathematik für Ingenieure~A4: Stochastik (2025), sowie Topology and Applications (2024).
+    \item Tutor in Topologie (2023, 2026), Funktionalanalysis (2026), Analysis~3 (2024, 2026), Analysis~2 (2025), Lineare Algebra~1 (2024), Mathematik für Ingenieure~A2: Analysis (2025), Mathematik für Ingenieure~A4: Stochastik (2025), sowie Topology and Applications (2024).
     \item Vertretung von Vorlesungen (Prof.\ Dr.\ Li, Prof.\ Dr.\ Meusburger) zu: \\
     	  Tietzeschem Fortsetzungssatz, Zusammenhang und Wegzusammenhang, Stetigkeit.
     \item Dozent für Veranstaltungseinheiten zum mathematischen Beweisen.
