--- a/resume_eng.tex
+++ b/resume_eng.tex
@@ -160,56 +160,52 @@
 
 \section{Education}
 \begin{twocolentry}{
-		\textit{Oct. 2024 – Mar. 2026}} \textbf{Friedrich-Alexander University Erlangen–Nuremberg} \\
-		\textit{M.Sc. Mathematics, Digital Humanities}
+		\textit{Oct. 2024 – Mar. 2026}} \textbf{Master of Science Mathematics} \\
+		\textit{Friedrich-Alexander University Erlangen–Nuremberg}\\
+		\textit{Minor: Digital Humanities}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
 		\item \textbf{Thesis:} Universal Coefficients and the Mayer--Vietoris Sequence for Moore Homology
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Oct. 2021 – Sept. 2024}}
-	\textbf{Friedrich-Alexander University Erlangen–Nuremberg} \\
-	\textit{B.Sc. Mathematics, Computer Science}
+	\textbf{Bachelor of Science Mathematics} \\
+	\textit{Friedrich-Alexander University Erlangen–Nuremberg} \\
+	\textit{Minor: Computer Science}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
 		\item \textbf{Thesis:} Algebraic and Topological Persistence
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Apr. 2015 – Mar. 2018}}
-	\textbf{University of Regensburg} \\
-	\textit{M.A. Information Science}
+	\textbf{Master of Arts Information Science} \\
+	\textit{University of Regensburg}\\
+	\textit{Minor: Digital Humanities}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
 		\item \textbf{Thesis:} Deep Learning for Estimating Absorbed Radiation Dose in Nuclear Medicine Diagnostics
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Oct. 2012 – Mar. 2015}}
-	\textbf{University of Regensburg} \\
-	\textit{B.A. German, Italian, Information Science, Media Informatics}
+	\textbf{Bachelor of Arts German Philology} \\
+	\textit{University of Regensburg} \\
+	\textit{Majors: German and Italian Philology, Information Science, Media Informatics}
 \end{twocolentry}
-\vspace{0.10 cm}
 \begin{onecolentry}
 	\begin{highlights}
 		\item \textbf{Thesis:} Development of a Punctuation Platform with Linguistic Modules for Information Retrieval
 	\end{highlights}
 \end{onecolentry}
 
-\vspace{0.10 cm}
 \begin{twocolentry}{
 		\textit{Oct. 2012 – Apr. 2013}}
 	\textbf{University of Regensburg} \\
@@ -229,7 +225,7 @@
 \vspace{0.1 cm}
 \begin{onecolentry}
   \begin{highlights}
-    \item Teaching assistant for Topology (2023, 2026), Functional Analysis (2026), Real Analysis~III (2024, 2026), Real Analysis~II (2025), Linear Algebra~I (2024), Mathematics for Engineers~A2: Calculus (2025), Mathematics for Engineers~A4: Stochastics (2025), and Topology and Applications (2024).
+    \item Tutor for Topology (2023, 2026), Functional Analysis (2026), Real Analysis~III (2024, 2026), Real Analysis~II (2025), Linear Algebra~I (2024), Mathematics for Engineers~A2: Calculus (2025), Mathematics for Engineers~A4: Stochastics (2025), and Topology and Applications (2024).
     \item Substitute lecturer for courses taught by Prof.\ Dr.\ Li and Prof.\ Dr.\ Meusburger on the Tietze extension theorem, connectedness and path-connectedness, and continuity.
     \item Lecturer for course units on mathematical proof writing.
     \item Exam proctoring, grading, and mentoring.
