--- a/resume.tex
+++ b/resume.tex
@@ -149,7 +149,7 @@
 	\kern 0.25 cm
 	\AND
 	\kern 0.25 cm
-	\mbox{\hrefWithoutArrow{mailto:melodia.luciano@proton.me}{\color{black}{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}melodia.luciano@proton.me}}
+	\mbox{\hrefWithoutArrow{mailto:luciano.melodia@fau.de}{\color{black}{\footnotesize\faEnvelope[regular]}\hspace*{0.13cm}luciano.melodia@fau.de}}
 	\kern 0.25 cm
 	\AND
 	\kern 0.25 cm
