--- a/resume.tex
+++ b/resume.tex
@@ -190,7 +190,7 @@
 \end{twocolentry}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Thesis:} Deep Learning zur Schätzung der absorbierten Strahlungsdosis in der nuklearmedizinischen Diagnostik
+		\item \textbf{Thesis:} Deep Learning Schätzung der absorbierten Strahlungsdosis in der nuklearmedizinischen Diagnostik
 	\end{highlights}
 \end{onecolentry}
 
