--- a/resume.tex
+++ b/resume.tex
@@ -429,7 +429,7 @@
 
 \section{Auszeichnungen, Stipendien und Gremientätigkeit}
 \begin{twocolentry}{\textit{2024}}
-  \href{https://logconference.org/program-committee/}{Auszeichnung als bester Gutachter der Konferenz Learning on Graphs (LOG)}
+  \href{https://logconference.org/program-committee/}{Auszeichnung als bester Gutachter: Learning on Graphs (LOG)}
 \end{twocolentry}
 \begin{twocolentry}{\textit{2024}}
   \href{https://www.stmwk.bayern.de/studenten/foerderung-und-stipendien/forster-stipendium.html}{Stipendiat des Oskar-Karl-Forster-Stipendiums}
