--- a/resume.tex
+++ b/resume.tex
@@ -166,7 +166,7 @@
 \end{twocolentry}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Thesis:} Universelle Koeffizienten und Mayer-Vietoris Sequenz für Moore Homologie
+		\item \textbf{Thesis:} Universelle Koeffizienten und Mayer-Vietoris Sequenz für Gruppoidhomologie
 	\end{highlights}
 \end{onecolentry}
 
