--- a/resume_eng.tex
+++ b/resume_eng.tex
@@ -166,7 +166,7 @@
 \end{twocolentry}
 \begin{onecolentry}
 	\begin{highlights}
-		\item \textbf{Thesis:} Universal Coefficients and the Mayer--Vietoris Sequence for Moore Homology
+		\item \textbf{Thesis:} Universal Coefficients and the Mayer--Vietoris Sequence for Groupoid Homology
 	\end{highlights}
 \end{onecolentry}
 
